deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deployment1
  name: deployment1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment1
    spec:
      containers:
      - image: sushmithad1606/githubactions:v1
        name: githubactions
        resources: {}
status: {}
