ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - github.kubeace.com
    secretName: github.kubeace.com-tls
  ingressClassName: nginx
  rules:
  - host: github.kubeace.com
    http:
      paths:
      - backend:
          service:
            name: deployment1
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer: {}
